# dbx

./: CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  flake.nix  package.json  pnpm-lock.yaml  vitest.config.ts
.github/scripts/: bump-agent-versions.mjs  sync-changelog.mjs  sync-changelog.test.mjs
.github/workflows/: mcp-release.yml  sync-changelog.yml
agents/: versions.json
agents/drivers/kingbase-go/: kingbase_metadata.go  main_test.go
agents/drivers/oracle-go/: main.go  main_test.go
agents/drivers/xugu/: main_test.go
apps/desktop/src/: App.vue
apps/desktop/src/composables/: useAppUpdater.ts  useConnectionGroupLabel.ts  useDataGridActions.ts  useDataGridColumnResize.ts  useDataGridEditor.ts  useDataGridExport.ts  useQuickOpen.ts  useSqlExecution.ts
apps/desktop/src/lib/: aiAgentStepPresentation.ts  aiMarkdown.ts  api.ts  databaseTableDataCapabilities.ts  dbeaverImport.ts  driverInstallProgressUi.ts  http.ts  navicatImport.ts  sidebarLayout.ts  sqlCompletion.ts  tableTree.ts  tauri.ts
apps/desktop/src/stores/: connectionStore.ts  queryStore.ts  settingsStore.ts  sqlFileStore.ts
apps/desktop/src/types/: database.ts
crates/dbx-cli/: Cargo.toml
crates/dbx-core/: Cargo.toml
crates/dbx-core/src/: agent_connection.rs  agent_loop.rs  connection.rs  csv_export.rs  data_grid_sql.rs  database_export.rs  jdbc.rs  lib.rs  query.rs  schema.rs  sql_file_import.rs  table_export.rs  table_import.rs  transfer.rs  update.rs
crates/dbx-core/src/db/: mod.rs  (+10 more)
crates/dbx-mcp/: Cargo.toml
crates/dbx-mcp/src/: backend.rs  lib.rs  main.rs  mongo.rs  paths.rs  server.rs
crates/dbx-mcp/tests/: local.rs  protocol.rs
crates/dbx-web/: Cargo.toml
crates/dbx-web/src/: main.rs  sse.rs
scripts/: release.mjs  verify-package-install.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: agents.rs  connection.rs  mcp_bridge.rs  mongo_cmd.rs  query.rs  schema.rs  sql_file.rs  transfer.rs  update.rs
src/components/config/: DriverManager.vue
(+98 files in other folders)
