[package]
name = "dbx-mcp"
version = "0.4.40"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "dbx-mcp"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
dbx-core = { path = "../dbx-core", default-features = false }
rmcp = { version = "2.2.0", features = ["client", "transport-io"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
url = "2"

[dev-dependencies]
tempfile = "3"
